fix z-index of tippy

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     position: fixed;
-    z-index: 10;
+    z-index: 100;
     background-color: var(--white);
 }
 
